parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMERO_MF
    TEXTO_MF
    VARIAVEL_MF
    ignore

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> COMENT
Rule 4     statement -> INTERROMPA DELIMITADOR
Rule 5     statement -> IFSULDEMINAS DELIMITADOR
Rule 6     statement -> COMPILADORES DELIMITADOR
Rule 7     statement -> INICIO ABRE_CH FECHA_CH
Rule 8     statement -> FIM ABRE_CH FECHA_CH
Rule 9     statement -> DEFINE ABRE_P VAR FECHA_P ABRE_CLT statement FECHA_CLT
Rule 10    statement -> DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P FECHA_CLT FECHA_CLT
Rule 11    statement -> DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT FECHA_CLT
Rule 12    statement -> DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT SENAO ABRE_CLT statement FECHA_CLT FECHA_CLT
Rule 13    statement -> ENQUANTO ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
Rule 14    statement -> PARA ABRE_P VAR OP_ATRIBUI VALOR_NUMINT VIRGULA cond_param VIRGULA VAR OP_ARIT OP_ARIT FECHA_P ABRE_CLT statements FECHA_CLT
Rule 15    statement -> VAR OP_ATRIBUI VALOR_NUMINT DELIMITADOR
Rule 16    statement -> VAR OP_ATRIBUI VALOR_NUMDEC DELIMITADOR
Rule 17    statement -> VAR OP_ATRIBUI VALOR_TEXTO DELIMITADOR
Rule 18    statement -> VAR OP_ATRIBUI VAR OP_ARIT OP_ARIT DELIMITADOR
Rule 19    statement -> VAR OP_ATRIBUI VAR DELIMITADOR
Rule 20    statement -> VAR OP_ATRIBUI VAR OP_ARIT VALOR_NUMINT DELIMITADOR
Rule 21    statement -> VAR OP_ATRIBUI VAR OP_ARIT VALOR_NUMDEC DELIMITADOR
Rule 22    statement -> VAR OP_ATRIBUI funcao DELIMITADOR
Rule 23    statement -> VAR DELIMITADOR
Rule 24    statement -> VAR OP_ATRIBUI VAR OP_ARIT VAR DELIMITADOR
Rule 25    statement -> SE ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
Rule 26    statement -> SE ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT SENAO ABRE_CLT statements FECHA_CLT
Rule 27    statement -> funcao DELIMITADOR
Rule 28    statement -> funcao ABRE_CLT statements FECHA_CLT
Rule 29    cond_param -> VAR OP_REL VALOR_NUMINT
Rule 30    cond_param -> VAR OP_REL VALOR_NUMDEC
Rule 31    cond_param -> VAR OP_REL VALOR_TEXTO
Rule 32    cond_param -> VAR OP_REL VALOR_NUMINT OP_LOGICO VAR OP_REL VALOR_NUMINT
Rule 33    cond_param -> VAR OP_REL VALOR_NUMDEC OP_LOGICO VAR OP_REL VALOR_NUMDEC
Rule 34    cond_param -> VAR OP_REL VALOR_TEXTO OP_LOGICO VAR OP_REL VALOR_TEXTO
Rule 35    cond_param -> BOOLEANO
Rule 36    statement -> AUX
Rule 37    statement -> ESCREVA ABRE_P VAR FECHA_P DELIMITADOR
Rule 38    statement -> ESCREVA ABRE_P ASPAS statements ASPAS FECHA_P DELIMITADOR
Rule 39    statement -> ESCREVA ABRE_P param FECHA_P DELIMITADOR
Rule 40    statement -> ESCREVA ABRE_P param DOIS_PONTOS
Rule 41    statement -> BOOLEANO
Rule 42    statement -> LEIA ABRE_P VAR FECHA_P DELIMITADOR
Rule 43    cond_param -> cond_param OP_REL cond_param
Rule 44    param_vazio -> <empty>
Rule 45    param -> VALOR_NUMINT
Rule 46    param -> VALOR_NUMDEC
Rule 47    param -> VALOR_TEXTO
Rule 48    param -> VAR
Rule 49    param -> param VIRGULA param
Rule 50    funcao -> ABRE_P param_vazio FECHA_P
Rule 51    funcao -> ABRE_P param FECHA_P

Terminals, with rules where they appear

ABRE_CH              : 7 8
ABRE_CLT             : 9 10 11 12 12 13 14 25 26 26 28
ABRE_P               : 9 10 10 11 11 12 12 13 14 25 26 37 38 39 40 42 50 51
ASPAS                : 38 38
AUX                  : 36
BOOLEANO             : 35 41
COMENT               : 3
COMPILADORES         : 6
DEFINE               : 9 10 11 12
DELIMITADOR          : 4 5 6 15 16 17 18 19 20 21 22 23 24 27 37 38 39 42
DOIS_PONTOS          : 40
ENQUANTO             : 13
ESCREVA              : 37 38 39 40
FECHA_CH             : 7 8
FECHA_CLT            : 9 10 10 11 11 12 12 12 13 14 25 26 26 28
FECHA_P              : 9 10 10 11 11 12 12 13 14 25 26 37 38 39 42 50 51
FIM                  : 8
IFSULDEMINAS         : 5
INICIO               : 7
INTERROMPA           : 4
LEIA                 : 42
NUMERO_MF            : 
OP_ARIT              : 14 14 18 18 20 21 24
OP_ATRIBUI           : 14 15 16 17 18 19 20 21 22 24
OP_LOGICO            : 32 33 34
OP_REL               : 29 30 31 32 32 33 33 34 34 43
PARA                 : 14
SE                   : 10 11 12 25 26
SENAO                : 12 26
TEXTO_MF             : 
VALOR_NUMDEC         : 16 21 30 33 33 46
VALOR_NUMINT         : 14 15 20 29 32 32 45
VALOR_TEXTO          : 17 31 34 34 47
VAR                  : 9 10 11 12 14 14 15 16 17 18 18 19 19 20 20 21 21 22 23 24 24 24 29 30 31 32 32 33 33 34 34 37 42 48
VARIAVEL_MF          : 
VIRGULA              : 14 14 49
error                : 
ignore               : 

Nonterminals, with rules where they appear

cond_param           : 10 11 12 13 14 25 26 43 43
funcao               : 22 27 28
param                : 39 40 49 49 51
param_vazio          : 50
statement            : 1 2 9 11 12 12
statements           : 1 13 14 25 26 26 28 38 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . COMENT
    (4) statement -> . INTERROMPA DELIMITADOR
    (5) statement -> . IFSULDEMINAS DELIMITADOR
    (6) statement -> . COMPILADORES DELIMITADOR
    (7) statement -> . INICIO ABRE_CH FECHA_CH
    (8) statement -> . FIM ABRE_CH FECHA_CH
    (9) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT statement FECHA_CLT
    (10) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P FECHA_CLT FECHA_CLT
    (11) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT FECHA_CLT
    (12) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT SENAO ABRE_CLT statement FECHA_CLT FECHA_CLT
    (13) statement -> . ENQUANTO ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
    (14) statement -> . PARA ABRE_P VAR OP_ATRIBUI VALOR_NUMINT VIRGULA cond_param VIRGULA VAR OP_ARIT OP_ARIT FECHA_P ABRE_CLT statements FECHA_CLT
    (15) statement -> . VAR OP_ATRIBUI VALOR_NUMINT DELIMITADOR
    (16) statement -> . VAR OP_ATRIBUI VALOR_NUMDEC DELIMITADOR
    (17) statement -> . VAR OP_ATRIBUI VALOR_TEXTO DELIMITADOR
    (18) statement -> . VAR OP_ATRIBUI VAR OP_ARIT OP_ARIT DELIMITADOR
    (19) statement -> . VAR OP_ATRIBUI VAR DELIMITADOR
    (20) statement -> . VAR OP_ATRIBUI VAR OP_ARIT VALOR_NUMINT DELIMITADOR
    (21) statement -> . VAR OP_ATRIBUI VAR OP_ARIT VALOR_NUMDEC DELIMITADOR
    (22) statement -> . VAR OP_ATRIBUI funcao DELIMITADOR
    (23) statement -> . VAR DELIMITADOR
    (24) statement -> . VAR OP_ATRIBUI VAR OP_ARIT VAR DELIMITADOR
    (25) statement -> . SE ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
    (26) statement -> . SE ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT SENAO ABRE_CLT statements FECHA_CLT
    (27) statement -> . funcao DELIMITADOR
    (28) statement -> . funcao ABRE_CLT statements FECHA_CLT
    (36) statement -> . AUX
    (37) statement -> . ESCREVA ABRE_P VAR FECHA_P DELIMITADOR
    (38) statement -> . ESCREVA ABRE_P ASPAS statements ASPAS FECHA_P DELIMITADOR
    (39) statement -> . ESCREVA ABRE_P param FECHA_P DELIMITADOR
    (40) statement -> . ESCREVA ABRE_P param DOIS_PONTOS
    (41) statement -> . BOOLEANO
    (42) statement -> . LEIA ABRE_P VAR FECHA_P DELIMITADOR
    (50) funcao -> . ABRE_P param_vazio FECHA_P
    (51) funcao -> . ABRE_P param FECHA_P

    COMENT          shift and go to state 3
    INTERROMPA      shift and go to state 4
    IFSULDEMINAS    shift and go to state 5
    COMPILADORES    shift and go to state 6
    INICIO          shift and go to state 7
    FIM             shift and go to state 8
    DEFINE          shift and go to state 9
    ENQUANTO        shift and go to state 13
    PARA            shift and go to state 14
    VAR             shift and go to state 11
    SE              shift and go to state 12
    AUX             shift and go to state 16
    ESCREVA         shift and go to state 17
    BOOLEANO        shift and go to state 18
    LEIA            shift and go to state 19
    ABRE_P          shift and go to state 10

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    funcao                         shift and go to state 15

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . COMENT
    (4) statement -> . INTERROMPA DELIMITADOR
    (5) statement -> . IFSULDEMINAS DELIMITADOR
    (6) statement -> . COMPILADORES DELIMITADOR
    (7) statement -> . INICIO ABRE_CH FECHA_CH
    (8) statement -> . FIM ABRE_CH FECHA_CH
    (9) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT statement FECHA_CLT
    (10) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P FECHA_CLT FECHA_CLT
    (11) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT FECHA_CLT
    (12) statement -> . DEFINE ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT SENAO ABRE_CLT statement FECHA_CLT FECHA_CLT
    (13) statement -> . ENQUANTO ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
    (14) statement -> . PARA ABRE_P VAR OP_ATRIBUI VALOR_NUMINT VIRGULA cond_param VIRGULA VAR OP_ARIT OP_ARIT FECHA_P ABRE_CLT statements FECHA_CLT
    (15) statement -> . VAR OP_ATRIBUI VALOR_NUMINT DELIMITADOR
    (16) statement -> . VAR OP_ATRIBUI VALOR_NUMDEC DELIMITADOR
    (17) statement -> . VAR OP_ATRIBUI VALOR_TEXTO DELIMITADOR
    (18) statement -> . VAR OP_ATRIBUI VAR OP_ARIT OP_ARIT DELIMITADOR
    (19) statement -> . VAR OP_ATRIBUI VAR DELIMITADOR
    (20) statement -> . VAR OP_ATRIBUI VAR OP_ARIT VALOR_NUMINT DELIMITADOR
    (21) statement -> . VAR OP_ATRIBUI VAR OP_ARIT VALOR_NUMDEC DELIMITADOR
    (22) statement -> . VAR OP_ATRIBUI funcao DELIMITADOR
    (23) statement -> . VAR DELIMITADOR
    (24) statement -> . VAR OP_ATRIBUI VAR OP_ARIT VAR DELIMITADOR
    (25) statement -> . SE ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
    (26) statement -> . SE ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT SENAO ABRE_CLT statements FECHA_CLT
    (27) statement -> . funcao DELIMITADOR
    (28) statement -> . funcao ABRE_CLT statements FECHA_CLT
    (36) statement -> . AUX
    (37) statement -> . ESCREVA ABRE_P VAR FECHA_P DELIMITADOR
    (38) statement -> . ESCREVA ABRE_P ASPAS statements ASPAS FECHA_P DELIMITADOR
    (39) statement -> . ESCREVA ABRE_P param FECHA_P DELIMITADOR
    (40) statement -> . ESCREVA ABRE_P param DOIS_PONTOS
    (41) statement -> . BOOLEANO
    (42) statement -> . LEIA ABRE_P VAR FECHA_P DELIMITADOR
    (50) funcao -> . ABRE_P param_vazio FECHA_P
    (51) funcao -> . ABRE_P param FECHA_P

    COMENT          shift and go to state 3
    INTERROMPA      shift and go to state 4
    IFSULDEMINAS    shift and go to state 5
    COMPILADORES    shift and go to state 6
    INICIO          shift and go to state 7
    FIM             shift and go to state 8
    DEFINE          shift and go to state 9
    ENQUANTO        shift and go to state 13
    PARA            shift and go to state 14
    VAR             shift and go to state 11
    SE              shift and go to state 12
    AUX             shift and go to state 16
    ESCREVA         shift and go to state 17
    BOOLEANO        shift and go to state 18
    LEIA            shift and go to state 19
    ABRE_P          shift and go to state 10

    statement                      shift and go to state 20
    funcao                         shift and go to state 15

state 2

    (2) statements -> statement .

    COMENT          reduce using rule 2 (statements -> statement .)
    INTERROMPA      reduce using rule 2 (statements -> statement .)
    IFSULDEMINAS    reduce using rule 2 (statements -> statement .)
    COMPILADORES    reduce using rule 2 (statements -> statement .)
    INICIO          reduce using rule 2 (statements -> statement .)
    FIM             reduce using rule 2 (statements -> statement .)
    DEFINE          reduce using rule 2 (statements -> statement .)
    ENQUANTO        reduce using rule 2 (statements -> statement .)
    PARA            reduce using rule 2 (statements -> statement .)
    VAR             reduce using rule 2 (statements -> statement .)
    SE              reduce using rule 2 (statements -> statement .)
    AUX             reduce using rule 2 (statements -> statement .)
    ESCREVA         reduce using rule 2 (statements -> statement .)
    BOOLEANO        reduce using rule 2 (statements -> statement .)
    LEIA            reduce using rule 2 (statements -> statement .)
    ABRE_P          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    FECHA_CLT       reduce using rule 2 (statements -> statement .)
    ASPAS           reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> COMENT .

    COMENT          reduce using rule 3 (statement -> COMENT .)
    INTERROMPA      reduce using rule 3 (statement -> COMENT .)
    IFSULDEMINAS    reduce using rule 3 (statement -> COMENT .)
    COMPILADORES    reduce using rule 3 (statement -> COMENT .)
    INICIO          reduce using rule 3 (statement -> COMENT .)
    FIM             reduce using rule 3 (statement -> COMENT .)
    DEFINE          reduce using rule 3 (statement -> COMENT .)
    ENQUANTO        reduce using rule 3 (statement -> COMENT .)
    PARA            reduce using rule 3 (statement -> COMENT .)
    VAR             reduce using rule 3 (statement -> COMENT .)
    SE              reduce using rule 3 (statement -> COMENT .)
    AUX             reduce using rule 3 (statement -> COMENT .)
    ESCREVA         reduce using rule 3 (statement -> COMENT .)
    BOOLEANO        reduce using rule 3 (statement -> COMENT .)
    LEIA            reduce using rule 3 (statement -> COMENT .)
    ABRE_P          reduce using rule 3 (statement -> COMENT .)
    $end            reduce using rule 3 (statement -> COMENT .)
    FECHA_CLT       reduce using rule 3 (statement -> COMENT .)
    ASPAS           reduce using rule 3 (statement -> COMENT .)


state 4

    (4) statement -> INTERROMPA . DELIMITADOR

    DELIMITADOR     shift and go to state 21


state 5

    (5) statement -> IFSULDEMINAS . DELIMITADOR

    DELIMITADOR     shift and go to state 22


state 6

    (6) statement -> COMPILADORES . DELIMITADOR

    DELIMITADOR     shift and go to state 23


state 7

    (7) statement -> INICIO . ABRE_CH FECHA_CH

    ABRE_CH         shift and go to state 24


state 8

    (8) statement -> FIM . ABRE_CH FECHA_CH

    ABRE_CH         shift and go to state 25


state 9

    (9) statement -> DEFINE . ABRE_P VAR FECHA_P ABRE_CLT statement FECHA_CLT
    (10) statement -> DEFINE . ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P FECHA_CLT FECHA_CLT
    (11) statement -> DEFINE . ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT FECHA_CLT
    (12) statement -> DEFINE . ABRE_P VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT SENAO ABRE_CLT statement FECHA_CLT FECHA_CLT

    ABRE_P          shift and go to state 26


state 10

    (50) funcao -> ABRE_P . param_vazio FECHA_P
    (51) funcao -> ABRE_P . param FECHA_P
    (44) param_vazio -> .
    (45) param -> . VALOR_NUMINT
    (46) param -> . VALOR_NUMDEC
    (47) param -> . VALOR_TEXTO
    (48) param -> . VAR
    (49) param -> . param VIRGULA param

    FECHA_P         reduce using rule 44 (param_vazio -> .)
    VALOR_NUMINT    shift and go to state 29
    VALOR_NUMDEC    shift and go to state 30
    VALOR_TEXTO     shift and go to state 31
    VAR             shift and go to state 32

    param_vazio                    shift and go to state 27
    param                          shift and go to state 28

state 11

    (15) statement -> VAR . OP_ATRIBUI VALOR_NUMINT DELIMITADOR
    (16) statement -> VAR . OP_ATRIBUI VALOR_NUMDEC DELIMITADOR
    (17) statement -> VAR . OP_ATRIBUI VALOR_TEXTO DELIMITADOR
    (18) statement -> VAR . OP_ATRIBUI VAR OP_ARIT OP_ARIT DELIMITADOR
    (19) statement -> VAR . OP_ATRIBUI VAR DELIMITADOR
    (20) statement -> VAR . OP_ATRIBUI VAR OP_ARIT VALOR_NUMINT DELIMITADOR
    (21) statement -> VAR . OP_ATRIBUI VAR OP_ARIT VALOR_NUMDEC DELIMITADOR
    (22) statement -> VAR . OP_ATRIBUI funcao DELIMITADOR
    (23) statement -> VAR . DELIMITADOR
    (24) statement -> VAR . OP_ATRIBUI VAR OP_ARIT VAR DELIMITADOR

    OP_ATRIBUI      shift and go to state 33
    DELIMITADOR     shift and go to state 34


state 12

    (25) statement -> SE . ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT
    (26) statement -> SE . ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT SENAO ABRE_CLT statements FECHA_CLT

    ABRE_P          shift and go to state 35


state 13

    (13) statement -> ENQUANTO . ABRE_P cond_param FECHA_P ABRE_CLT statements FECHA_CLT

    ABRE_P          shift and go to state 36


state 14

    (14) statement -> PARA . ABRE_P VAR OP_ATRIBUI VALOR_NUMINT VIRGULA cond_param VIRGULA VAR OP_ARIT OP_ARIT FECHA_P ABRE_CLT statements FECHA_CLT

    ABRE_P          shift and go to state 37


state 15

    (27) statement -> funcao . DELIMITADOR
    (28) statement -> funcao . ABRE_CLT statements FECHA_CLT

    DELIMITADOR     shift and go to state 38
    ABRE_CLT        shift and go to state 39


state 16

    (36) statement -> AUX .

    COMENT          reduce using rule 36 (statement -> AUX .)
    INTERROMPA      reduce using rule 36 (statement -> AUX .)
    IFSULDEMINAS    reduce using rule 36 (statement -> AUX .)
    COMPILADORES    reduce using rule 36 (statement -> AUX .)
    INICIO          reduce using rule 36 (statement -> AUX .)
    FIM             reduce using rule 36 (statement -> AUX .)
    DEFINE          reduce using rule 36 (statement -> AUX .)
    ENQUANTO        reduce using rule 36 (statement -> AUX .)
    PARA            reduce using rule 36 (statement -> AUX .)
    VAR             reduce using rule 36 (statement -> AUX .)
    SE              reduce using rule 36 (statement -> AUX .)
    AUX             reduce using rule 36 (statement -> AUX .)
    ESCREVA         reduce using rule 36 (statement -> AUX .)
    BOOLEANO        reduce using rule 36 (statement -> AUX .)
    LEIA            reduce using rule 36 (statement -> AUX .)
    ABRE_P          reduce using rule 36 (statement -> AUX .)
    $end            reduce using rule 36 (statement -> AUX .)
    FECHA_CLT       reduce using rule 36 (statement -> AUX .)
    ASPAS           reduce using rule 36 (statement -> AUX .)


state 17

    (37) statement -> ESCREVA . ABRE_P VAR FECHA_P DELIMITADOR
    (38) statement -> ESCREVA . ABRE_P ASPAS statements ASPAS FECHA_P DELIMITADOR
    (39) statement -> ESCREVA . ABRE_P param FECHA_P DELIMITADOR
    (40) statement -> ESCREVA . ABRE_P param DOIS_PONTOS

    ABRE_P          shift and go to state 40


state 18

    (41) statement -> BOOLEANO .

    COMENT          reduce using rule 41 (statement -> BOOLEANO .)
    INTERROMPA      reduce using rule 41 (statement -> BOOLEANO .)
    IFSULDEMINAS    reduce using rule 41 (statement -> BOOLEANO .)
    COMPILADORES    reduce using rule 41 (statement -> BOOLEANO .)
    INICIO          reduce using rule 41 (statement -> BOOLEANO .)
    FIM             reduce using rule 41 (statement -> BOOLEANO .)
    DEFINE          reduce using rule 41 (statement -> BOOLEANO .)
    ENQUANTO        reduce using rule 41 (statement -> BOOLEANO .)
    PARA            reduce using rule 41 (statement -> BOOLEANO .)
    VAR             reduce using rule 41 (statement -> BOOLEANO .)
    SE              reduce using rule 41 (statement -> BOOLEANO .)
    AUX             reduce using rule 41 (statement -> BOOLEANO .)
    ESCREVA         reduce using rule 41 (statement -> BOOLEANO .)
    BOOLEANO        reduce using rule 41 (statement -> BOOLEANO .)
    LEIA            reduce using rule 41 (statement -> BOOLEANO .)
    ABRE_P          reduce using rule 41 (statement -> BOOLEANO .)
    $end            reduce using rule 41 (statement -> BOOLEANO .)
    FECHA_CLT       reduce using rule 41 (statement -> BOOLEANO .)
    ASPAS           reduce using rule 41 (statement -> BOOLEANO .)


state 19

    (42) statement -> LEIA . ABRE_P VAR FECHA_P DELIMITADOR

    ABRE_P          shift and go to state 41


state 20

    (1) statements -> statements statement .

    COMENT          reduce using rule 1 (statements -> statements statement .)
    INTERROMPA      reduce using rule 1 (statements -> statements statement .)
    IFSULDEMINAS    reduce using rule 1 (statements -> statements statement .)
    COMPILADORES    reduce using rule 1 (statements -> statements statement .)
    INICIO          reduce using rule 1 (statements -> statements statement .)
    FIM             reduce using rule 1 (statements -> statements statement .)
    DEFINE          reduce using rule 1 (statements -> statements statement .)
    ENQUANTO        reduce using rule 1 (statements -> statements statement .)
    PARA            reduce using rule 1 (statements -> statements statement .)
    VAR             reduce using rule 1 (statements -> statements statement .)
    SE              reduce using rule 1 (statements -> statements statement .)
    AUX             reduce using rule 1 (statements -> statements statement .)
    ESCREVA         reduce using rule 1 (statements -> statements statement .)
    BOOLEANO        reduce using rule 1 (statements -> statements statement .)
    LEIA            reduce using rule 1 (statements -> statements statement .)
    ABRE_P          reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    FECHA_CLT       reduce using rule 1 (statements -> statements statement .)
    ASPAS           reduce using rule 1 (statements -> statements statement .)


state 21

    (4) statement -> INTERROMPA DELIMITADOR .

    COMENT          reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    INTERROMPA      reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    IFSULDEMINAS    reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    COMPILADORES    reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    INICIO          reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    FIM             reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    DEFINE          reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    ENQUANTO        reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    PARA            reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    VAR             reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    SE              reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    AUX             reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    ESCREVA         reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    BOOLEANO        reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    LEIA            reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    ABRE_P          reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    $end            reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    FECHA_CLT       reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)
    ASPAS           reduce using rule 4 (statement -> INTERROMPA DELIMITADOR .)


state 22

    (5) statement -> IFSULDEMINAS DELIMITADOR .

    COMENT          reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    INTERROMPA      reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    IFSULDEMINAS    reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    COMPILADORES    reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    INICIO          reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    FIM             reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    DEFINE          reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    ENQUANTO        reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    PARA            reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    VAR             reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    SE              reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    AUX             reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    ESCREVA         reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    BOOLEANO        reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    LEIA            reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    ABRE_P          reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    $end            reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    FECHA_CLT       reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)
    ASPAS           reduce using rule 5 (statement -> IFSULDEMINAS DELIMITADOR .)


state 23

    (6) statement -> COMPILADORES DELIMITADOR .

    COMENT          reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    INTERROMPA      reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    IFSULDEMINAS    reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    COMPILADORES    reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    INICIO          reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    FIM             reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    DEFINE          reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    ENQUANTO        reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    PARA            reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    VAR             reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    SE              reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    AUX             reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    ESCREVA         reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    BOOLEANO        reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    LEIA            reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    ABRE_P          reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    $end            reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    FECHA_CLT       reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)
    ASPAS           reduce using rule 6 (statement -> COMPILADORES DELIMITADOR .)


state 24

    (7) statement -> INICIO ABRE_CH . FECHA_CH

    FECHA_CH        shift and go to state 42


state 25

    (8) statement -> FIM ABRE_CH . FECHA_CH

    FECHA_CH        shift and go to state 43


state 26

    (9) statement -> DEFINE ABRE_P . VAR FECHA_P ABRE_CLT statement FECHA_CLT
    (10) statement -> DEFINE ABRE_P . VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P FECHA_CLT FECHA_CLT
    (11) statement -> DEFINE ABRE_P . VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT FECHA_CLT
    (12) statement -> DEFINE ABRE_P . VAR FECHA_P ABRE_CLT SE ABRE_P cond_param FECHA_P statement FECHA_CLT SENAO ABRE_CLT statement FECHA_CLT FECHA_CLT

    VAR             shift and go to state 44


state 27

    (50) funcao -> ABRE_P param_vazio . FECHA_P

    FECHA_P         shift and go to state 45


state 28

    (51) funcao -> ABRE_P param . FECHA_P
    (49) param -> param . VIRGULA param

    FECHA_P         shift and go to state 46
    VIRGULA         shift and go to state 47


state 29

    (45) param -> VALOR_NUMINT .

    FECHA_P         reduce using rule 45 (param -> VALOR_NUMINT .)
    VIRGULA         reduce using rule 45 (param -> VALOR_NUMINT .)
    DOIS_PONTOS     reduce using rule 45 (param -> VALOR_NUMINT .)


state 30

    (46) param -> VALOR_NUMDEC .

    FECHA_P         reduce using rule 46 (param -> VALOR_NUMDEC .)
    VIRGULA         reduce using rule 46 (param -> VALOR_NUMDEC .)
    DOIS_PONTOS     reduce using rule 46 (param -> VALOR_NUMDEC .)


state 31

    (47) param -> VALOR_TEXTO .

    FECHA_P         reduce using rule 47 (param -> VALOR_TEXTO .)
    VIRGULA         reduce using rule 47 (param -> VALOR_TEXTO .)
    DOIS_PONTOS     reduce using rule 47 (param -> VALOR_TEXTO .)


state 32

